fix button clipping (mainly)
makes transform scale smaller the buttons can still clip a bit but its better than before if ender sees this try to move the buttons a little further apart

--- a/style.css
+++ b/style.css
@@ -42,22 +42,22 @@ body {
 .button1:hover {
     background-color: #1982EA;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 .button2:hover {
     background-color: #1982EA;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 .button3:hover {
     background-color: #1982EA;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 .button4:hover {
     background-color: #1982EA;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 html 
